<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fatura">


    <TextView
            android:text="@string/resumo_das_faturas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold"
            android:textColor="#000000" android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_faturas" android:layout_marginTop="100dp"/>
    <TextView
            android:text="@string/data_de_vencimento_05_03_2021"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView7"
            android:layout_marginTop="32dp" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" android:textStyle="bold"/>
    <TextView
            android:text="@string/saldo_parcial_500_00"
            android:layout_width="258dp"
            android:layout_height="0dp" android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:textSize="18sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"/>
    <Button
            android:text="@string/pagar_fatura"
            android:layout_width="304dp"
            android:background="@color/light_blue"
            android:textColor="#FFFFFF"
            android:layout_height="51dp" android:id="@+id/btn_pagarFatura"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="100dp"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" android:id="@+id/toolbar_faturas"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>