<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                app:layout_constraintGuide_percent="0.5"
                                                android:orientation="vertical"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/saldo" android:id="@+id/btn_saldo"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="50dp"/>
    <TextView
            android:text="@string/saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_saldo"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_saldo" android:layout_marginTop="16dp"
            android:textSize="18sp" android:textColor="#000000"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/fatura" android:id="@+id/btn_faturas"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="50dp"/>
    <TextView
            android:text="@string/faturas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_fatura"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btn_faturas" android:textColor="#000000" android:textSize="18sp"
            android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/transferencia" android:id="@+id/btn_transferencia"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_saldo"
            android:layout_marginTop="50dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/poupanca" android:id="@+id/btn_poupanca"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_fatura"
            android:layout_marginTop="50dp"/>
    <TextView
            android:text="@string/transfer_ncia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/btn_transferencia"
            app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/poupan_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/btn_poupanca" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="16dp"
            android:textSize="18sp" android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>